# ft_transcendence

./: Makefile  README.md
.github/ISSUE_TEMPLATE/: story_template.yml  task_template.yml
Two_factor_authent_test/: Dockerfile  authentification.py
srcs/: .env  docker-compose.yml
srcs/Two_Factor_authentication/: Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
srcs/Two_factor_autent/: apps.py  (+3 more)
srcs/user_management_service/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
srcs/user_management_service/Two_factor_authentication/: apps.py  models.py  urls.py  views.py
srcs/user_management_service/Two_factor_authentication/migrations/: 0001_initial.py  0002_remove_userloginattempt_user_and_more.py  0003_remove_userloginattempt_username_and_more.py
srcs/user_management_service/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
srcs/user_management_service/authentication/migrations/: 0001_initial.py  0002_remove_userprofile_score.py  0003_alter_userprofile_avatar.py  0004_userprofile_is_online.py
srcs/user_management_service/scores/: models.py  serializers.py  urls.py  views.py
srcs/user_management_service/scores/migrations/: 0001_initial.py  0002_remove_score_score_score_opponent_score_and_more.py  0003_score_game_type_score_tournament_name.py
srcs/user_management_service/setup/: asgi.py  settings.py  urls.py  views.py  wsgi.py
srcs/user_management_service/users/: models.py  serializers.py  urls.py  views.py
srcs/user_management_service/vault_connector/: apps.py  vault_connection.py
test_projet/: db.sqlite3  manage.py
(+104 files in other folders)
